--- a/build.gradle
+++ b/build.gradle
@@ -26,9 +26,24 @@ dependencies {
             "org.junit.jupiter:junit-jupiter:5.8.2",
             "org.slf4j:slf4j-simple:1.7.36",
             "com.github.javafaker:javafaker:1.0.2",
-            "io.qameta.allure:allure-selenide:2.18.1")
+            "io.qameta.allure:allure-selenide:2.18.1",
+            "org.aeonbits.owner:owner:1.0.12")
 }
 
 tasks.withType(Test) {
+    systemProperties(System.getProperties())
     useJUnitPlatform()
+
+    testLogging {
+        lifecycle {
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
+    }
+}
+
+task formtest(type: Test) {
+    useJUnitPlatform{
+        includeTags "form"
+    }
 }
